--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix"
+    "lint:fix": "eslint src test --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
