--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,13 @@
 {
- "extends": [
-    "@rocketseat/eslint-config/node",
-    "plugin:vitest-globals/recommended"
-  ],
-  "rules": {
-    "no-useless-constructor": "off"
-  },
-  "env": {
-    "vitest-globals/env": true
-  }
+	"extends": [
+		"@rocketseat/eslint-config/node",
+		"plugin:vitest-globals/recommended"
+	],
+	"rules": {
+		"no-useless-constructor": "off",
+		"no-new": "off"
+	},
+	"env": {
+		"vitest-globals/env": true
+	}
 }
